# cgs-test

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md
app/backend/: Cargo.toml
app/backend/src/: main.rs  sas_client.rs  validate.rs  verification.rs
app/sas_client/: Cargo.toml
app/sas_client/src/: lib.rs
programs/cgs-test/: Cargo.toml
programs/cgs-test/src/: lib.rs
programs/test-solana-program/: Cargo.toml
programs/test-solana-program/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_initialize.rs  test_sas.rs
