[workspace]
members = ["app/backend", "programs/*", "tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
