[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
solana-attestation-service-client = "1.0.9"
tokio = { workspace = true }
test-solana-program = { version = "0.1.0", path = "../programs/test-solana-program" }
sas_client = { path = "../app/sas_client" }
