[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { workspace = true }

solana-sdk = "2.3.1"
solana-client = "2.3.2"
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
solana-attestation-service-client = "1.0.9"
borsh = "0.10"
anyhow = "1.0"
dotenvy = "0.15.7"
