[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sas_client = { path = "../sas_client" }
test-solana-program = { version = "0.1.0", path = "../../programs/test-solana-program" }
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { workspace = true }

solana-sdk = "2.3.1"
anchor-lang = "0.31.1"
anchor-client = { version = "0.31.1", features = ["async"] }

anyhow = "1.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
	"env-filter",
	"json",
	"time",
] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
