[package]
name = "test-solana-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_solana_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"
solana-attestation-service-client = "1.0.9"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(target_os, values("solana"))',
] }
